Add footer of our website

--- a/THE_WAR/INDEX.html
+++ b/THE_WAR/INDEX.html
@@ -108,6 +108,31 @@ Vous trouverez ici des informations sur les personnages et les chefs de guerre l
 
 
     <section>
+<footer class="footer-distributed" id="contact">
+
+			<div class="footer-right">
+
+				<a href="#"><i class="fa fa-facebook"></i></a>
+				<a href="#"><i class="fa fa-twitter"></i></a>
+				<a href="#"><i class="fa fa-linkedin"></i></a>
+				<a href="#"><i class="fa fa-github"></i></a>
+
+			</div>
+
+			<div class="footer-left">
+
+				<p class="footer-links">
+					<a class="link-1" href="#home">Home</a>
+
+					
+
+					
+
+					<a href="#">About</a>
+
+					<a href="#">Faq</a>
+
+					<a href="#">Contact</a>
 
 
  
