Fixing error of footer

--- a/THE_WAR/INDEX.html
+++ b/THE_WAR/INDEX.html
@@ -133,8 +133,12 @@ Vous trouverez ici des informations sur les personnages et les chefs de guerre l
 					<a href="#">Faq</a>
 
 					<a href="#">Contact</a>
+                                </p>
 
+				<p>Company Name &copy; 2020</p>
+			</div>
 
+		</footer>
  
   
   </body>
